# test-ghs

./: .dockerignore  .env.example  .gitignore  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  tasks
docker/: Dockerfile
docker/wheels/: git_sparse-0.2.0-cp311-abi3-manylinux_2_17_x86_64.manylinux2014_x86_64.whl
scripts/: ghascan  install.sh
src/gha_vuln_scanner/: cli.py  collector.py  db.py  jobs.py  producer.py  scanner.py  tokens.py  ui.py  worker.py
tests/: test_queue_pipeline.py
